cdk/cdk.out.uat/uat-AuroraStack.template.json
{
 "Resources": {
  "AuroraSecurityGroup75F699F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Aurora PostgreSQL with pgvector",
    "GroupName": "uat-aurora-pg-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::ImportValue": "uat-VpcStack:ExportsOutputFnGetAttMoodleVpc895D09D1CidrBlock84532412"
      },
      "Description": "Allow PostgreSQL from VPC",
      "FromPort": 5432,
      "IpProtocol": "tcp",
      "ToPort": 5432
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "uat-VpcStack:ExportsOutputRefMoodleVpc895D09D1476475ED"
    }
   },
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraSecurityGroup/Resource"
   }
  },
  "AuroraParameterGroup4BFCEB23": {
   "Type": "AWS::RDS::DBClusterParameterGroup",
   "Properties": {
    "Description": "Cluster parameter group for aurora-postgresql15",
    "Family": "aurora-postgresql15",
    "Parameters": {
     "shared_preload_libraries": "pg_stat_statements,pgvector",
     "log_statement": "ddl",
     "log_min_duration_statement": "1000"
    }
   },
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraParameterGroup/Resource"
   }
  },
  "AuroraClusterSubnetsF3E9E6AD": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnets for AuroraCluster database",
    "SubnetIds": [
     {
      "Fn::ImportValue": "uat-VpcStack:ExportsOutputRefMoodleVpcIsolatedSubnet1SubnetDE085280C1FC39E0"
     },
     {
      "Fn::ImportValue": "uat-VpcStack:ExportsOutputRefMoodleVpcIsolatedSubnet2SubnetE81DCE81577A1F79"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraCluster/Subnets/Default"
   }
  },
  "uatAuroraStackAuroraClusterSecretCB14AF123fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"vectordb_admin\"}"
    },
    "Name": "uat/aurora/postgres-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraCluster/Secret/Resource"
   }
  },
  "AuroraClusterSecretAttachmentDB8032DA": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "uatAuroraStackAuroraClusterSecretCB14AF123fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuroraCluster23D869C0"
    },
    "TargetType": "AWS::RDS::DBCluster"
   },
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraCluster/Secret/Attachment/Resource"
   }
  },
  "AuroraCluster23D869C0": {
   "Type": "AWS::RDS::DBCluster",
   "Properties": {
    "BackupRetentionPeriod": 7,
    "CopyTagsToSnapshot": true,
    "DBClusterIdentifier": "uat-aurora-pgvector",
    "DBClusterParameterGroupName": {
     "Ref": "AuroraParameterGroup4BFCEB23"
    },
    "DBSubnetGroupName": {
     "Ref": "AuroraClusterSubnetsF3E9E6AD"
    },
    "DatabaseName": "vectordb",
    "DeletionProtection": false,
    "EnableHttpEndpoint": true,
    "Engine": "aurora-postgresql",
    "EngineVersion": "15.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "uatAuroraStackAuroraClusterSecretCB14AF123fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "vectordb_admin",
    "Port": 5432,
    "PreferredBackupWindow": "03:00-04:00",
    "PreferredMaintenanceWindow": "Mon:04:00-Mon:05:00",
    "StorageEncrypted": true,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "AuroraSecurityGroup75F699F6",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraCluster/Resource"
   }
  },
  "AuroraClusterwriter499C523E": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "DBClusterIdentifier": {
     "Ref": "AuroraCluster23D869C0"
    },
    "DBInstanceClass": "db.t3.medium",
    "Engine": "aurora-postgresql",
    "PromotionTier": 0,
    "PubliclyAccessible": false
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/AuroraCluster/writer/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/71UTW8TMRD9LfhYuUsJAoncQgoo4qNRUuBQVWhiT7ZuvfYyHidEq/3vyPvVTegBLpzWHq9n3nvzxpNs8vJ1dvEM9uFc6YdzazZZtWZQDxL24UeFapJVa1SRDB8+kI/lTSV2pRJTcSakCOOTL1BgF9cYFJmSjXddBKz1+5m1V5E3PjotpluwAWtZCdB64XLCEFbRopjeVEKBWzhrHLYRpohSKO8cqpQzdEmjMz8jLnSzrWVVS3EmbutbOd+6I9C1JB2yagkEBTJSzwRdbhyKab+6PpQ9hTbwDSk0JCqxjdYO2+aXAu49jUO1FOVRifdQGHs4yngU0riFaPlrQHK9euMkoWcmNsbpaz+3MTCSmN48Er1820WP2clLYNhAwO40qdquFhodm61JeUbA/pMKwbjcYmK88gypm7OytEbByCx/qZQUIZalJ0b9yecJda+X2JPhgR8h6 [...]
   },
   "Metadata": {
    "aws:cdk:path": "uat-AuroraStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "AuroraClusterEndpoint": {
   "Description": "Aurora PostgreSQL Cluster Endpoint",
   "Value": {
    "Fn::GetAtt": [
     "AuroraCluster23D869C0",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "uat-AuroraClusterEndpoint"
   }
  },
  "AuroraClusterPort": {
   "Description": "Aurora PostgreSQL Cluster Port",
   "Value": {
    "Fn::GetAtt": [
     "AuroraCluster23D869C0",
     "Endpoint.Port"
    ]
   },
   "Export": {
    "Name": "uat-AuroraClusterPort"
   }
  },
  "AuroraReaderEndpoint": {
   "Description": "Aurora PostgreSQL Reader Endpoint",
   "Value": {
    "Fn::GetAtt": [
     "AuroraCluster23D869C0",
     "ReadEndpoint.Address"
    ]
   },
   "Export": {
    "Name": "uat-AuroraReaderEndpoint"
   }
  },
  "AuroraSecretArn": {
   "Description": "Aurora PostgreSQL Secret ARN",
   "Value": {
    "Ref": "AuroraClusterSecretAttachmentDB8032DA"
   },
   "Export": {
    "Name": "uat-AuroraSecretArn"
   }
  },
  "AuroraSecurityGroupId": {
   "Description": "Aurora Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "AuroraSecurityGroup75F699F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "uat-AuroraSecurityGroupId"
   }
  },
  "ExportsOutputRefAuroraClusterSecretAttachmentDB8032DAFDEEBE73": {
   "Value": {
    "Ref": "AuroraClusterSecretAttachmentDB8032DA"
   },
   "Export": {
    "Name": "uat-AuroraStack:ExportsOutputRefAuroraClusterSecretAttachmentDB8032DAFDEEBE73"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
